--- a/MeinStudManager/ClientApp/src/app/app.component.html
+++ b/MeinStudManager/ClientApp/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-header></app-header>
+<app-header *ngIf="router.url !=='/login' && router.url !=='/register'"></app-header>
 <router-outlet></router-outlet>
