--- a/MeinStudManager/ClientApp/src/app/auth/auth.component.css
+++ b/MeinStudManager/ClientApp/src/app/auth/auth.component.css
@@ -1,3 +1,7 @@
+.custom-wrapper {
+  height: 100vh;
+  background-color: aqua;
+}
 
 .btn-primary {
   margin: 5px;
@@ -7,14 +11,18 @@
   margin: 50px;
 }
  .container {
-  padding-top: 200px;
+  padding-top: 150px;
  }
  .custom-border {
    border-color: black;
    border-style: solid;
    padding: 5px;
+   border-radius: 5px;
  }
  h3 {
    margin-top: 20px;
  }
+ input.ng-invalid.ng-touched {
+  border: 2px solid red;
+}
 
