--- a/MeinStudManager/ClientApp/src/app/auth/auth.component.html
+++ b/MeinStudManager/ClientApp/src/app/auth/auth.component.html
@@ -1,49 +1,60 @@
+<div class="custom-wrapper">
 
+  <div class="container">
+    <div class="row justify-content-center ">
+      <div class="col-12 col-md-6">
+        <div class="row">
 
-<div class="container">
-  <div class="row justify-content-center ">
-    <div class="col-12 col-md-6">
-      <div class="row">
-
-          <div class="col-8">
-            <div class="row">
-              <h2>Mein</h2>
-            </div>
-            <div class="row ">
-              <h2 class="text-center">Studmanager</h2>
-            </div>
-            <div class="row">
-              <h3>Die schlaue Art zu studieren</h3>
-            </div>
-        </div>
-
-          <div class="col-4">
-            <form class="custom-border">
+            <div class="col-8">
               <div class="row">
-                <h3>Login</h3>
-               </div>
-
-                 <div class="form-group">
-                   <label for="name">Name</label>
-                   <input type="text" id="" class="form-control">
-                 </div>
-
-
-                 <div class="form-group">
-                   <label for="email">Email</label>
-                   <input type="email" id="email" class="form-control">
-                 </div>
-                 <div>
-                  <button class="btn btn-primary">Login</button>
-                  <button class="btn btn-primary">Register</button>
-                 </div>
-            </form>
+                <h2>Mein</h2>
+              </div>
+              <div class="row ">
+                <h2 class="text-center">Studmanager</h2>
+              </div>
+              <div class="row">
+                <h3>Die schlaue Art zu studieren</h3>
+              </div>
           </div>
 
+            <div class="col-4">
+              <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="custom-border">
+                <div class="row">
+                  <h3>Login</h3>
+                 </div>
+
+                   <div class="form-group">
+                     <label for="name">Name oder Email</label>
+                     <input
+                      type="text"
+                      formControlName="ident"
+                      id=""
+                      class="form-control">
+                   </div>
+
+
+                   <div class="form-group">
+                     <label for="password">Passwort</label>
+                     <input
+                      type="password"
+                      id="password"
+                      formControlName="password"
+                      class="form-control">
+                   </div>
+                   <div>
+                    <button type="submit" [disabled]="!loginForm.valid" class="btn btn-primary">Login</button>
+                    <button class="btn btn-primary" (click)="onRegister()">Register</button>
+                   </div>
+              </form>
+            </div>
+
+        </div>
       </div>
     </div>
   </div>
+
 </div>
+
 
 
 
