--- a/MeinStudManager/ClientApp/src/app/auth/register/register.component.html
+++ b/MeinStudManager/ClientApp/src/app/auth/register/register.component.html
@@ -12,9 +12,9 @@
             <div class="col-sm-6">
               <input
                 type="text"
-                formControlName="username"
+                formControlName="userName"
                 class="form-control"
-                id="username">
+                id="userName">
             </div>
           </div>
 
@@ -24,9 +24,9 @@
             <div class="col-sm-6 text-end">
               <input
                 type="text"
-                formControlName="firstname"
+                formControlName="firstName"
                 class="form-control"
-                id="firstname">
+                id="firstName">
             </div>
           </div>
 
@@ -35,9 +35,9 @@
             <div class="col-sm-6">
               <input
                 type="text"
-                formControlName="lastname"
+                formControlName="lastName"
                 class="form-control"
-                id="lastname">
+                id="lastName">
             </div>
           </div>
 
@@ -74,9 +74,9 @@
             <div class="col-sm-6">
               <input
                 type="password"
-                formControlName="confirmed-password"
+                formControlName="confirmPassword"
                 class="form-control"
-                id="confirmed-password">
+                id="confirmPassword">
             </div>
           </div>
 
