--- a/MeinStudManager/ClientApp/src/app/header/header.component.html
+++ b/MeinStudManager/ClientApp/src/app/header/header.component.html
@@ -13,7 +13,7 @@
         <a class="nav-link" routerLink="/" >Home</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">Planer</a>
+        <a class="nav-link" routerLink="/planner">Planer</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="#">Lernen</a>
