[Frontend] #9 Added Data Model, added Lecturer and Category to Event Editor

--- a/MeinStudManager/ClientApp/src/app/planner/planner/planner.component.html
+++ b/MeinStudManager/ClientApp/src/app/planner/planner/planner.component.html
@@ -1,2 +1,4 @@
-<p>planner works!</p>
-<ejs-schedule #scheduleObj [eventSettings]='eventSettings' (eventRendered)="onEventRendered($event)"></ejs-schedule>
+<ejs-schedule #scheduleObj [eventSettings]='eventSettings'
+  (eventRendered)="onEventRendered($event)"
+  (popupOpen)='onPopupOpen($event)'
+  ></ejs-schedule>
