[Frontend] #9 Added Triggers to handle Date modification, implemented PlannerService

--- a/MeinStudManager/ClientApp/src/app/planner/planner/planner.component.html
+++ b/MeinStudManager/ClientApp/src/app/planner/planner/planner.component.html
@@ -1,4 +1,5 @@
 <ejs-schedule #scheduleObj [eventSettings]='eventSettings'
   (eventRendered)="onEventRendered($event)"
   (popupOpen)='onPopupOpen($event)'
+  (actionBegin)="onActionBegin($event)"
   ></ejs-schedule>
