--- a/MeinStudManager/ClientApp/src/app/planner/planner/planner.component.html
+++ b/MeinStudManager/ClientApp/src/app/planner/planner/planner.component.html
@@ -2,4 +2,5 @@
   (eventRendered)="onEventRendered($event)"
   (popupOpen)='onPopupOpen($event)'
   (actionBegin)="onActionBegin($event)"
+  (actionComplete)="onActionComplete($event)"
   ></ejs-schedule>
