--- a/MeinStudManager/ClientApp/src/app/auth/register/register.component.html
+++ b/MeinStudManager/ClientApp/src/app/auth/register/register.component.html
@@ -85,7 +85,7 @@
 
           <div class="row">
             <div class="col-6">
-              <button type="button" class="btn btn-primary" (click)="onAbbort()">Abbrechen</button>
+              <button type="button" class="btn btn-primary" (click)="onAbort()">Abbrechen</button>
           </div>
             <div class="col-6 text-end">
                 <button type="submit" [disabled]="!registerForm.valid" class="btn btn-primary">Registrieren</button>
