--- a/MeinStudManager/ClientApp/src/app/profile/change-profile/change-profile.component.html
+++ b/MeinStudManager/ClientApp/src/app/profile/change-profile/change-profile.component.html
@@ -124,7 +124,7 @@
         <div class="col-6">
           <label for="lastname" class="form-label"> Telefon </label>
           <input
-            type="number"
+            type="tel"
             id="phonenumber"
             formControlName="phoneNumber"
             class="form-control">
