[Frontend] Login style alternative

--- a/MeinStudManager/ClientApp/src/app/header/header.component.html
+++ b/MeinStudManager/ClientApp/src/app/header/header.component.html
@@ -16,7 +16,7 @@
         <a class="nav-link" routerLink="/planner">Planer</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">Lernen</a>
+        <a class="nav-link" routerLink="/lernen">Lernen</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="#">Forum</a>
