--- a/MeinStudManager/ClientApp/src/app/auth/auth.component.css
+++ b/MeinStudManager/ClientApp/src/app/auth/auth.component.css
@@ -1,6 +1,23 @@
 .custom-wrapper {
   height: 100vh;
-  background-color: aqua;
+  //background-color: aqua;
+  //background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background: linear-gradient(-45deg, #000099, #9999FF, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+}
+
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 .btn-primary {
