--- a/MeinStudManager/ClientApp/src/app/profile/profile.component.html
+++ b/MeinStudManager/ClientApp/src/app/profile/profile.component.html
@@ -8,8 +8,8 @@
   <li routerLinkActive="active-link" class="nav-item active">
     <a class="nav-link" routerLink="notenspiegel">Notenspiegel</a>
   </li>
-  <li class="nav-item active">
-    <a class="nav-link" (click)="onLogout()">Logout</a>
+  <li routerLinkActive="active-link" class="nav-item active">
+    <a class="nav-link" routerLink="#" (click)="onLogout()">Logout</a>
   </li>
 </ul>
 <router-outlet></router-outlet>
