--- a/MeinStudManager/ClientApp/src/app/auth/register/register.component.html
+++ b/MeinStudManager/ClientApp/src/app/auth/register/register.component.html
@@ -3,7 +3,7 @@
 
   <div class="container custom-padding">
     <div class="row justify-content-center">
-      <div class="col-12 col-md-4">
+      <div class="col-md-5">
         <h2 class="text-center">Register</h2>
         <div *ngIf="isLoading" style="text-align: center;">
           <app-loading-spinner></app-loading-spinner>
