--- a/MeinStudManager/ClientApp/src/app/planner/planner/custom-ej2-angular-schedule.css
+++ b/MeinStudManager/ClientApp/src/app/planner/planner/custom-ej2-angular-schedule.css
@@ -5,3 +5,21 @@
   padding-bottom: 12px;
   width: 100%;
 }
+
+.custom-ej2-allday-timezone-row {
+  display: grid;
+  padding-bottom: 14px;
+  padding-top: 8px;
+  width: 100%;
+  grid-template-columns: 50% 50%;
+}
+
+.custom-ej2-color-picker-container {
+  display: inline-block;
+  white-space: nowrap;
+  padding-left: 12px;
+}
+
+.e-custom-colorpicker-text{
+  padding-right: 10px;
+}
