--- a/MeinStudManager/ClientApp/src/app/profile/performance-record/performance-record.component.html
+++ b/MeinStudManager/ClientApp/src/app/profile/performance-record/performance-record.component.html
@@ -7,32 +7,35 @@
       </div>
 
       <div class="row  custom-border-up">
-        <div class="col-6">1. Studienabschnit</div>
+        <div class="col-6 fw-bold">1. Studienabschnit</div>
         <div class="col-6 text-end "
-        [ngClass]="{'dropend': showSubjects}">
+        [ngClass]="{'dropend': showSubjectsSectionOne}">
           <button
           class="btn btn-primary dropdown-toggle"
-          (click)="setShowSubjects()">
+          (click)="setShowSubjectsSectionOne()">
         </button>
         </div>
       </div>
 
-      <div *ngIf="!showSubjects; else subjectTemplate"></div>
+      <div *ngIf="!showSubjectsSectionOne; else subjectTemplateOne"></div>
 
 
 
       <div class="row  custom-border-up">
-        <div class="col-6">2. Studienabschnit</div>
-        <div class="col-6 text-end">
+        <div class="col-6 fw-bold">2. Studienabschnit</div>
+        <div class="col-6 text-end"
+        [ngClass]="{'dropend': showSubjectsSectionTwo}">
           <button
-          class="btn btn-primary dropdown-toggle">
+          class="btn btn-primary dropdown-toggle"
+          (click)="setShowSubjectsSectionTwo()">
         </button>
         </div>
       </div>
 
+      <div *ngIf="!showSubjectsSectionTwo; else subjectTemplateTwo"></div>
 
       <div class="row  custom-border-up">
-        <div class="col-6">Wahlpflichtfächer</div>
+        <div class="col-6 fw-bold">Wahlpflichtfächer</div>
         <div class="col-6 text-end">
           <button
           class="btn btn-primary dropdown-toggle">
@@ -42,7 +45,7 @@
       </div>
 
       <div class="row  custom-border no-padding">
-        <div class="col-8 align-self-center">Durchschnitt</div>
+        <div class="col-8 align-self-center fw-bold">Durchschnitt</div>
         <div class="col-2 custom-border-left">
           2.4
         </div>
@@ -53,8 +56,22 @@
 
 
 
-        <ng-template #subjectTemplate>
-          <div *ngFor="let subject of subjects">
+        <ng-template #subjectTemplateOne>
+          <div *ngFor="let subject of subjectsSectionOne">
+            <div class="row  custom-border-up no-padding">
+              <div class="col-8 align-self-center">{{subject.name}}</div>
+              <div class="col-2 custom-border-left">
+                {{subject.grade}}
+              </div>
+              <div class="col-2 custom-border-left">
+                {{subject.cp }}   CP
+              </div>
+            </div>
+          </div>
+        </ng-template>
+
+        <ng-template #subjectTemplateTwo>
+          <div *ngFor="let subject of subjectsSectionTwo">
             <div class="row  custom-border-up no-padding">
               <div class="col-8 align-self-center">{{subject.name}}</div>
               <div class="col-2 custom-border-left">
