fixed 401 logout message

--- a/MeinStudManager/ClientApp/src/app/auth/auth.component.html
+++ b/MeinStudManager/ClientApp/src/app/auth/auth.component.html
@@ -54,6 +54,10 @@
                 <div>{{errorMessage}}!</div>
               </div>
 
+              <div *ngIf="loggedOut && !isLoading" style="text-align: center;">
+                <div>{{loggedOutMessage}}!</div>
+              </div>
+
             </div>
 
         </div>
