--- a/MeinStudManager/ClientApp/src/app/header/header.component.html
+++ b/MeinStudManager/ClientApp/src/app/header/header.component.html
@@ -18,7 +18,7 @@
         <a class="nav-link" routerLink="/lernen">Lernen</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">Forum</a>
+        <a class="nav-link" href="/forum">Forum</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="#">Chat</a>
