[Frontend] #16 Added Functionality to create and view Topics, also view Replies (WIP)

--- a/MeinStudManager/ClientApp/src/app/forum/forum.component.html
+++ b/MeinStudManager/ClientApp/src/app/forum/forum.component.html
@@ -1,1 +1,32 @@
-<h1>Ja Moin</h1>
+<h1>Ja Moin - Das Forum</h1>
+
+
+<!-- Topic Overview -->
+<div class="topic-overview-main-structure" *ngIf="!insideTopic">
+  <button mat-raised-button (click)="createNewTopic()">Neuer Beitrag</button>
+
+  <div class="post-container" *ngFor="let topic of currentTopics" (click)="showTopic(topic)">
+    <div class="post">
+      <b>{{topic.title}}</b><br>
+      Last Reply: {{topic.lastReply}}
+    </div>
+  </div>
+
+  <div class="page-container">
+    1 2 3 4 5
+  </div>
+</div>
+
+
+<button *ngIf="insideTopic" (click)="navigateBackToTopics()">Back to Topics</button>
+
+<!-- Topic View -->
+<div *ngIf="insideTopic">
+  <div *ngFor="let reply of currentReplies">
+    von {{reply.authorName}}: {{reply.title}}
+    <br>
+    {{reply.content}}
+  </div>
+
+  <button mat-raised-button (click)="createAnswer()">Antworten</button>
+</div>
