[Frontend] #16 added Edit Function and direct Answers

--- a/MeinStudManager/ClientApp/src/app/forum/editor/post-creator.html
+++ b/MeinStudManager/ClientApp/src/app/forum/editor/post-creator.html
@@ -1,13 +1,13 @@
-<h1>Neuen Beitrag Hizufügen</h1>
+<h1>{{headerText}}</h1>
 
 <div class="editor-main-container">
   Title:
-  <input matInput [(ngModel)]="postData.title">
+  <input #titleArea matInput [(ngModel)]="postData.title">
 
   Content:
-  <textarea [(ngModel)]="postData.content"></textarea>
+  <textarea #contentArea [(ngModel)]="postData.content"></textarea>
 
-  <div class="editor-buttom-row">
+  <div class="editor-bottom-row">
     <button (click)="postDiscarded()">Discard</button>
     <button  [mat-dialog-close]="postData" >Submit</button>
   </div>
