[Frontend} #16 edited Dialogs, added delete and voting Function, added Pages, some css formatting and loading-spinner

--- a/MeinStudManager/ClientApp/src/app/forum/editor/post-creator.html
+++ b/MeinStudManager/ClientApp/src/app/forum/editor/post-creator.html
@@ -8,8 +8,8 @@
   <textarea #contentArea [(ngModel)]="postData.content"></textarea>
 
   <div class="editor-bottom-row">
-    <button (click)="postDiscarded()">Discard</button>
-    <button  [mat-dialog-close]="postData" >Submit</button>
+    <button (click)="postDiscarded()">Abbrechen</button>
+    <button (click)="postSubmitted()">Senden</button>
   </div>
 
 </div>
