--- a/MeinStudManager/ClientApp/src/app/forum/forum.component.html
+++ b/MeinStudManager/ClientApp/src/app/forum/forum.component.html
@@ -1,9 +1,14 @@
-<h1>Ja Moin - Das Forum</h1>
+<h1>Mein Studplaner - Das Forum</h1>
 
 
 <!-- Topic Overview -->
 <div class="topic-overview-main-structure">
-  <button mat-raised-button (click)="createNewTopic()">Neuer Beitrag</button>
+
+  <button class="create-new-topic-btn" mat-raised-button (click)="createNewTopic()">Neuer Beitrag</button>
+  <br>
+  Showing Page: {{pageId}}
+
+  <mat-spinner style="margin:0 auto;" *ngIf="loadingTopics" ></mat-spinner>
 
   <div class="topic-container" *ngFor="let topic of currentTopics" (click)="showTopic(topic)">
     <div class="topic">
@@ -13,6 +18,9 @@
   </div>
 
   <div class="page-container">
-    1 2 3 4 5
+    Page<br>
+    <div class="page-clickables-container" *ngFor="let number of pageIterationNumbers" (click)="goToPage(number)">
+      {{number}}
+    </div>
   </div>
 </div>
